// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultList component renders correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [Function],
      "subscribe": [MockFunction],
    }
  }
>
  <Connect(vaultList)>
    <vaultList
      dispatch={[MockFunction]}
      vaults={
        Object {
          "0x421e1cef6e85e78da2470e54af64a626f45afb85": Object {
            "group": "0x7ce6e371085cb611fb46d5065397223ef2f952ff",
            "id": "1",
            "name": "Third Vault",
            "owner": "0x7328ef1d7ab7583eb9968b2f4a9c900f8a2e2d6d",
            "symbol": "das",
            "totalSupply": "21343170000000000000",
          },
          "0x86a1ba4d485ce346bded508e2426798f825558be": Object {
            "group": "0x7ce6e371085cb611fb46d5065397223ef2f952ff",
            "id": "0",
            "name": "First Vault",
            "owner": "0x242b2dd21e7e1a2b2516d0a3a06b58e2d9bf9196",
            "symbol": "asd",
            "totalSupply": "28640000000000000000",
          },
        }
      }
    >
      <div
        className="vault-list"
      >
        <ListPanel
          items={
            Array [
              Object {
                "itemName": "First Vault",
                "itemSymbol": "asd",
                "itemValue": "28.64",
              },
              Object {
                "itemName": "Third Vault",
                "itemSymbol": "das",
                "itemValue": "21.34317",
              },
            ]
          }
          title="Vaults"
          tooltip={null}
        >
          <ContentWrapper
            header={
              <PanelHeader
                title="Vaults"
                tooltip={null}
              />
            }
          >
            <div
              className="content-wrapper"
            >
              <div
                className="content-wrapper-header"
              >
                <PanelHeader
                  title="Vaults"
                  tooltip={null}
                >
                  <div
                    className="panel-header"
                  >
                    <h1>
                      Vaults
                    </h1>
                  </div>
                </PanelHeader>
              </div>
              <div
                className="content-wrapper-content"
              >
                <List
                  Component={[Function]}
                  Divider={null}
                  className={null}
                  data={
                    Array [
                      Object {
                        "itemName": "First Vault",
                        "itemSymbol": "asd",
                        "itemValue": "28.64",
                      },
                      Object {
                        "itemName": "Third Vault",
                        "itemSymbol": "das",
                        "itemValue": "21.34317",
                      },
                    ]
                  }
                >
                  <div
                    className={null}
                  >
                    <ListItem
                      className=""
                      currencyGrowth={null}
                      growth={null}
                      itemName="First Vault"
                      itemSymbol="asd"
                      itemValue={"28.64"}
                      key="0"
                      onClick={[Function]}
                    >
                      <div
                        className="list-item"
                        onClick={[Function]}
                      >
                        <ItemName
                          name="First Vault"
                          symbol="asd"
                        >
                          <div
                            className="no-events"
                          >
                            <span
                              className="item-symbol"
                            >
                              asd
                            </span>
                            <span
                              className="item-name"
                            >
                              First Vault
                            </span>
                          </div>
                        </ItemName>
                        <ItemValue
                          currency="ETH"
                          currencyGrowth={null}
                          growth={null}
                          itemValue={"28.64"}
                          precision={2}
                          valueSize="large"
                        >
                          <div
                            className="no-events"
                          >
                            <span
                              className="item-value large"
                            >
                              28.64
                            </span>
                          </div>
                        </ItemValue>
                      </div>
                    </ListItem>
                    <ListItem
                      className=""
                      currencyGrowth={null}
                      growth={null}
                      itemName="Third Vault"
                      itemSymbol="das"
                      itemValue={"21.34317"}
                      key="1"
                      onClick={[Function]}
                    >
                      <div
                        className="list-item"
                        onClick={[Function]}
                      >
                        <ItemName
                          name="Third Vault"
                          symbol="das"
                        >
                          <div
                            className="no-events"
                          >
                            <span
                              className="item-symbol"
                            >
                              das
                            </span>
                            <span
                              className="item-name"
                            >
                              Third Vault
                            </span>
                          </div>
                        </ItemName>
                        <ItemValue
                          currency="ETH"
                          currencyGrowth={null}
                          growth={null}
                          itemValue={"21.34317"}
                          precision={2}
                          valueSize="large"
                        >
                          <div
                            className="no-events"
                          >
                            <span
                              className="item-value large"
                            >
                              21.34
                            </span>
                          </div>
                        </ItemValue>
                      </div>
                    </ListItem>
                  </div>
                </List>
              </div>
            </div>
          </ContentWrapper>
        </ListPanel>
      </div>
    </vaultList>
  </Connect(vaultList)>
</Provider>
`;

exports[`VaultList component renders correctly if there are no vaults on state 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [Function],
      "subscribe": [MockFunction],
    }
  }
>
  <Connect(vaultList)>
    <vaultList
      dispatch={[MockFunction]}
      vaults={Object {}}
    >
      <div
        className="vault-list"
      >
        <ListPanel
          items={Array []}
          title="Vaults"
          tooltip={null}
        >
          <ContentWrapper
            header={
              <PanelHeader
                title="Vaults"
                tooltip={null}
              />
            }
          >
            <div
              className="content-wrapper"
            >
              <div
                className="content-wrapper-header"
              >
                <PanelHeader
                  title="Vaults"
                  tooltip={null}
                >
                  <div
                    className="panel-header"
                  >
                    <h1>
                      Vaults
                    </h1>
                  </div>
                </PanelHeader>
              </div>
              <div
                className="content-wrapper-content"
              >
                <List
                  Component={[Function]}
                  Divider={null}
                  className={null}
                  data={Array []}
                >
                  <div
                    className={null}
                  />
                </List>
              </div>
            </div>
          </ContentWrapper>
        </ListPanel>
      </div>
    </vaultList>
  </Connect(vaultList)>
</Provider>
`;
